--- a/seyeong/2장_타입이란.md
+++ b/seyeong/2장_타입이란.md
@@ -102,12 +102,64 @@
 
 ### 타입 애너테이션
 
-### 덕 타이핑, 구조적 타이핑, 명목적 타이핑
+- 타입 애너테이션<sup>type annotation</sup> : 변수나 상수 혹은 함수의 인자와 반환 값에 타입을 명시적으로 선언해서 어떤 타입 값이 저장될 것인지를 컴파일러에 직접 알려주는 문법
 
-- 명목적 타이핑:
-  - 이름으로 타입을 구분
-  - 타입의 동일성을 확인하는 과정에서 구조적 타이핑보다 좀 더 안전
-- 구조적 타이핑:
+- 예시
+  ```java
+  // 자바
+  int seyeongNum = 28;
+  String seyeongName = 'seyeong'
+  ```
+  ```typescript
+  // 타입스크립트
+  let isDone: boolean: false;
+  let decimal: number = 10;
+  ```
+
+### 명목적 타이핑
+
+- 이름으로 타입을 구분
+- 타입의 동일성을 확인하는 과정에서 구조적 타이핑보다 좀 더 안전
+
+### 구조적 타이핑
+
+- 구조로 타입을 구분
+- **타입스크립트는 구조로 타입을 구분함**
+- 예시
+
+  - 아래 코드에서 `Developer`와 `BankNote`는 타입의 이름이 다르지만, 구조가 같기에 서로 호환된다.
+
+  ```typescript
+  interface Developer {
+    value: number;
+  }
+  interface BankNote {
+    value: number;
+  }
+  let developer: Developer = { value: 3 };
+  let bankNote: BankNote = { value: 5 };
+
+  developer = bankNote; // OK
+  bankNote = developer; // OK
+  ```
+
+### 구조적 서브타이핑<sup>Structral Subtyping</sup>
+
+#### 타입과 집합의 관계
+
+- 타입은 단지 집합에 포함되는 값이고 특정 값은 많은 집합에 포함 가능
+- 타입스크립트에서는 특정 값이 여러 타입을 동시에 가질 수 있음
+
+  ```typescript
+  type stringOrNumber = string | number;
+  ```
+
+#### 구조적 서브타이핑이란?
+
+- 타입스크립트의 타입 시스템을 지탱하는 핵심 개념
+- 객체가 가지고 있는 속성을 바탕으로 타입을 구분하는 방식
+- 이름이 다른 객체라도 가진 속성이 동일하다면 서로 호환 가능한 동일한 타입으로 간주
+- 예시
 
   ```typescript
   interface Pet {
@@ -122,33 +174,49 @@
   let pet: Pet;
   let cat: Cat = { name: "a", age: 2 };
 
-  pet = cat;
-  console.log(pet);
+  pet = cat; // OK
   ```
 
-- 구조적 서브타이핑:
-- 서브타입과 상위타입의 관계
-- 덕 타이핑:
+#### 구조적 서브타이핑의 적용
 
-  - 어떤 타입에 부합하는 변수와 메서드를 가질 경우 해당 타입에 속하는 것으로 간주하는 방식
-  - 어떤 함수의 매개변수값이 올바르게 주어진다면 그 값이 어떻게 만들어졌는지 신경쓰지 않고 사용
+- 함수의 매개변수에도 구조적 서브타이핑 적용
+- 타입의 상속 역시 구조적 타이핑을 기반으로 함
+- 서로 다른 두 타입간의 호환성은 오로지 타입 내부의 구조에 의해 결정
+- 타입 A가 타입 B의 서브타입이라면 A 타입의 인스턴스는 B 타입이 필요한 곳에 언제든지 위치 가능
+  > **서브타입과 상위타입의 관계**
+  >
+  > `서브타입(Subtype)`: 더 구체적이고 속성이 더 많은 타입
+  >
+  > _예: 위 예시에서 Cat은 Pet의 서브타입
+  > Cat은 Pet이 가진 모든 속성(name)을 포함하면서 추가 속성(age)도 가짐_
+  >
+  > `상위타입(Supertype)`: 더 일반적이고 속성이 더 적은 타입
+  >
+  > _예: 위 예시에서 Pet은 Cat의 상위타입
+  > Pet은 Cat보다 더 적은 속성을 요구하므로 더 넓은 범위의 객체를 수용 가능_
 
-- 명목적 타이핑 vs 구조적 타이핑, 덕 타이핑
-- 구조적 타이핑 vs 덕 타이핑
-  - 두개 다 모두 객체가 가진 속성을 기반으로 타입을 검사!
-    - 객체 변수, 메서드 같은 필드를 기반으로 타입 검사
-  - 차이는 그냥 타입 검사 시점임
-    - 덕타이핑: 런타임에서 타입 검사, 동적 타이핑 / 구조적 타이핑: 컴파일타임에 타입체커가 타입 검사, 정적 타이핑
+### 덕 타이핑
+
+- 어떤 타입에 부합하는 변수와 메서드를 가질 경우 해당 타입에 속하는 것으로 간주하는 방식
+- 어떤 함수의 매개변수값이 올바르게 주어진다면 그 값이 어떻게 만들어졌는지 신경쓰지 않고 사용
+
+### 명목적 타이핑 vs 구조적 타이핑 vs 덕 타이핑
+
+| 타이핑 시스템                        | 타입 검사 기준            | 타입 검사 시점           | 대표적 언어              |
+| ------------------------------------ | ------------------------- | ------------------------ | ------------------------ |
+| 명목적 타이핑<br>(Nominal Typing)    | 타입의 이름               | 컴파일 타임              | Java, C#, C++            |
+| 구조적 타이핑<br>(Structural Typing) | 객체의 구조(속성, 메서드) | 컴파일 타임(정적 타이핑) | TypeScript, Go           |
+| 덕 타이핑<br>(Duck Typing)           | 객체의 구조(속성, 메서드) | 런타임(동적 타이핑)      | JavaScript, Python, Ruby |
 
 ### 타입스크립트가 구조적 타이핑을 채택한 이유
 
-명목적 타이핑이 좀 더 안전한데 왜 구조적 타이핑을 채택햇을가?
+명목적 타이핑이 좀 더 안전한데 왜 구조적 타이핑을 채택했을가?
 
 - 타입스크립트가 자바스크립트를 모델링한 언어이기 때문
-- 자바스크립트는 본질적으로 덕 타이핑을 기반으로 함
-- 구조적 타이핑 덕분에 ts는 더욱 유연한 타이핑이 가능
+- 자바스크립트는 본질적으로 덕 타이핑<sup>Duck Typing</sup>을 기반으로 함
+- 구조적 타이핑 덕분에 타입스크립트는 더욱 유연한 타이핑이 가능
 
-### 구조적 타이핑의 결과
+### 구조적 타이핑의 문제
 
 ```typescript
 interface Cube {
@@ -164,7 +232,7 @@ function addLines(c: Cube) {
 }
 ```
 
-- 문제1)
+- 문제1) Object.keys(c)가 반환하는 string[] 타입의 키를 사용하여 Cube 타입의 객체를 인덱싱할 수 없음 (인덱스 시그니처 부재)
 - 문제2) c에 들어올 객체는 Cube의 속성 이외에도 어떤 속성이든 가질 수 있기 때문에 문제 -> `c[axis]` 의 타입이 number라고 확정할 수 없음
 
 ### 타입스크립트의 점진적 타입 확인
@@ -177,6 +245,204 @@ function addLines(c: Cube) {
   ```typescript
   const names = ["1", "2"];
   console.log(names[2].toUpperCase()); // 런타임 에러 발생
+  ```
+
+### 자바스크립트 슈퍼셋으로서의 타입스크립트
+
+- 타입스크립트는 자바스크립트에 정적인 타이핑을 추가한 상위 집합
+- 모든 자바스크립트 코드는 타입스크립트지만, 모든 타입스크립트 코드가 자바스크립트 코드인 것은 아님
+
+### 값 vs 타입
+
+#### 기본 개념
+
+- 값<sup>value</sup>
+  - 메모리에 저장하는 모든 데이터
+  - 문자열, 숫자, 변수, 매개변수, 함수 등
+- 타입
+  - 변수, 매개변수, 객체 속성 등에 `: type` 형태로 타입을 명시
+  - `type`이나 `interface`키워드로 커스텀 타입 정의
+
+#### 값과 타입의 네임스페이스 분리
+
+- 값 공간과 타입 공간의 이름은 서로 충돌 안함
+- 타입스크립트의 타입 정의는 자바스크립트 런타임에서 제거됨
+- 값과 타입은 타입스크립트에서 별도의 네임스페이스에 존재
+- <u>**타입스크립트는 코드 문맥을 파악**해 스스로 **값 또는 타입으로 해석**함</u>
+  - 값과 타입의 구분은 맥락에 따라 달라질 수 있어 혼동스러운 상황이 발생할 수 있음
+
+#### 타입과 값 구분하는 법
+
+- 일반적으로는 타입은 타입 선언(:) 또는 타입 단언문(as)으로 작성
+- 값은 할당 연산자인 =로 작성
+- 함수 매개변수처럼 여러 심볼이 함께 쓰이는 경우 타입과 값을 명확히 구분해야 함
+
+#### 예시: 함수 매개변수
+
+```typescript
+function postTIL(author: Developer, date: Date, content: string): Response {
+  //...
+}
+```
+
+- **값**: author, date, content
+- **타입**: Developer, Date, string
+
+#### 혼동되는 상황: 구조 분해 할당
+
+```typescript
+function email(options: { person: Person; subject: string; body: string }) {
+  // ...
+}
+```
+
+이 함수의 매개변수를 구조 분해 할당으로 풀어쓰면:
+
+```typescript
+function email({ person, subject, body }) {
+  //...
+}
+```
+
+**주의할 점**: 아래처럼 타입을 지정하면 오류 발생
+
+```typescript
+// 오류 발생 !!!
+function email({ person: Person, subject: string, body: string }) {
+  //...
+}
+```
+
+위 코드에서 `Person`, `string`은 값 공간에 있는 것으로 해석됨
+(`person`과 `Person`은 객체 속성의 키-값 쌍으로 해석됨)
+
+**올바른 방법**:
+
+```typescript
+function email({
+  person,
+  subject,
+  body,
+}: {
+  person: Person;
+  subject: string;
+  body: string;
+}) {
+  //...
+}
+```
+
+#### 클래스와 enum
+
+- 클래스(Class): 값과 동시에 타입으로도 사용됨
+- 열거형(Enum):
+  - 런타임에 실제 객체로 존재
+  - 함수로 표현 가능
+  - 타입 공간에서 타입을 제한하는 역할
+  - 자바스크립트 런타임에서도 실제 값으로 사용 가능
+
+#### enum과 const enum의 특징
+
+- 일반 `enum`
+
+  - 자바스크립트 런타임에 객체로 존재
+  - 트리쉐이킹이 되지 않음 (사용하지 않아도 번들에 포함됨)
+  - 컴파일 시 즉시 실행 함수(IIFE)로 변환됨
+
+  ```typescript
+  enum Direction {
+    Up,
+    Down,
+    Left,
+    Right,
+  }
+  // 컴파일된 JavaScript
+  var Direction;
+  (function (Direction) {
+    Direction[(Direction["Up"] = 0)] = "Up";
+    Direction[(Direction["Down"] = 1)] = "Down";
+    Direction[(Direction["Left"] = 2)] = "Left";
+    Direction[(Direction["Right"] = 3)] = "Right";
+  })(Direction || (Direction = {}));
+  ```
+
+- `const enum`
+
+  - 컴파일 시 열거형 멤버의 값이 인라인으로 대체됨
+  - 트리쉐이킹이 됨 (객체가 생성되지 않아 번들 크기가 줄어듦)
+  - 런타임에 enum 객체가 존재하지 않음
+
+  ```typescript
+  const enum Direction {
+    Up,
+    Down,
+    Left,
+    Right,
+  }
+  let move = Direction.Up;
+
+  // 컴파일된 JavaScript
+  let move = 0; // Direction.Up의 값이 직접 대체됨
+  ```
+
+  - const enum 사용 시 주의사항
+    - isolatedModules: true 설정 시 const enum 사용에 제약 발생
+      - isolatedModules: 각 파일이 독립적으로 처리되므로 타입 정보를 파일 간에 공유할 수 없음 -> 트랜스파일 시 타입 정보가 필요하므로 isolatedModules 모드에서는 사용 제한
+    - 대안으로 as const를 사용한 객체 리터럴이나 일반 enum 사용 권장
+
+#### 타입스크립트에서 값/타입의 컴파일 후 존재 여부
+
+- <u>**타입스크립트에서 값으로 사용되는 심볼은 자바스크립트 컴파일 후에도 파일에 정보가 남아있음**</u>
+- <u>**타입으로만 사용되는 요소는 컴파일 이후 자바스크립트에서 해당 정보가 완전히 사라짐**</u>
+- 코드 작성 시 어떤 요소가 컴파일 후에 남을지 사라질지 구분하는 것은 런타임 동작을 이해하는 데 중요함
+
+#### 타입스크립트에서 자바스크립트 키워드가 해석되는 방식
+
+| 키워드          | 값  | 타입 |
+| --------------- | --- | ---- |
+| class           | O   | O    |
+| enum            | O   | O    |
+| const, let, var | O   | X    |
+| function        | O   | X    |
+| namespace       | O   | X    |
+| interface       | X   | O    |
+| type            | X   | O    |
+
+<i>\*namespace: 타입스크립트의 키워드, 관련된 기능을 하나의 단위로 묶어 전역 스코프의 오염을 방지, 자바스크립트로 컴파일 시 객체로 변환됨</i>
+
+### 타입을 확인하는 방법
+
+typeof, instanceof 연산자를 통해 타입 확인 가능
+
+#### typeof 연산자
+
+- 반환값: Boolean, null, undefined, Number, BigInt, String, Symbol, Function, 호스트 객체, object 객체
+- 타입스크립트에서의 typeof 이중성:
+
+  - **값 공간에서 사용될 때**: 자바스크립트 런타임의 typeof 연산자로 동작
+  - **타입 값 공간에서 사용될 때**: 타입스크립트의 타입을 반환하는 연산자로 동작
+
+- 클래스와 typeof 사용 시 주의점
+
+  - **값 공간에서 class의 typeof**: 'function'을 반환
+  - **타입 공간에서 class의 typeof**: 해당 클래스의 생성자 함수 타입을 반환
+
+  ```typescript
+  class Developer {
+    name: string;
+    sleepingTime: number;
+
+    constructor(name: string, sleepingTime: number) {
+      this.name = name;
+      this.sleepingTime = sleepingTime;
+    }
+  }
+  // 값 공간에서의 typeof - 'function'을 반환
+  const d = typeof Developer; // 'function'
+
+  // 타입 공간에서의 typeof - 해당 클래스의 생성자 함수 타입을 반환
+  type T = typeof Developer; // typeof Developer -> 요건 좀 특이함. 여기서 Developer는 생성자 함수이기 때문
+  // typeof Developer == new (name: string, sleepingTime: number): Developer
   ```
 
 ## 2.3 원시 타입
@@ -214,8 +480,7 @@ function addLines(c: Cube) {
 - 서브타입 관계
   - 원시 타입은 해당 래퍼 객체 타입의 서브타입으로 취급됨
   - 이는 일반적인 객체지향 상속 관계가 아닌 타입스크립트의 특별한 할당 규칙
-- 실무 권장사항
-  - 타입스크립트에서 타입 선언 시 원시 타입 사용 권장
+- 타입스크립트에서 타입 선언 시 원시 타입 사용 권장
 
 ### boolean - 오직 `true`와 `false` 값만 할당 가능
 
@@ -244,22 +509,23 @@ function addLines(c: Cube) {
 
 - 타입스크립트의 모든 타입은 기본적으로 null이나 undefined를 포함함
 - tsconfig의 strictNullChecks 옵션 활성화 시
-  - 사용자가 명시적으로 해당 타입에 null이나 undefined를 포함해야 사용 가능
-  - 그렇지 않으면 null과 undefined가 될 수 있는 경우에 타입스크립트 에러 발생
+- 사용자가 명시적으로 해당 타입에 null이나 undefined를 포함해야 사용 가능
+- 그렇지 않으면 null과 undefined가 될 수 있는 경우에 타입스크립트 에러 발생
 - 처리 방법
-  1. 타입 가드를 사용하여 null과 undefined를 걸러내는 방법
-  2. [Non-null 단언 연산자(!)를 사용하여 타입 단언](https://inpa.tistory.com/entry/TS-%F0%9F%93%98-%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EB%8A%90%EB%82%8C%ED%91%9C-Non-null-%EB%8B%A8%EC%96%B8-%EC%97%B0%EC%82%B0%EC%9E%90)
+
+1. 타입 가드를 사용하여 null과 undefined를 걸러내는 방법
+2. [Non-null 단언 연산자(!)를 사용하여 타입 단언](https://inpa.tistory.com/entry/TS-%F0%9F%93%98-%ED%83%80%EC%9E%85%EC%8A%A4%ED%81%AC%EB%A6%BD%ED%8A%B8-%EB%8A%90%EB%82%8C%ED%91%9C-Non-null-%EB%8B%A8%EC%96%B8-%EC%97%B0%EC%82%B0%EC%9E%90)
 
 ### number - 숫자에 해당하는 모든 원시 값 할당 가능
 
 - byte, short, int, long, double, float과 같은 다양한 숫자 타입을 가지는 자바 같은 언어와는 달리, 자바스크립트의 숫자는 정수와 부동소수점수를 구분하지 않기 때문에 모두 number 타입에 할당
 - NaN, Infinity도 number 타입
-  - 둘 다 원시 값이다
-    ```typescript
-    // 아래 코드는 타입 오류 발생 안함
-    let a: number = NaN;
-    let b: number = Infinity;
-    ```
+- 둘 다 원시 값이다
+  ```typescript
+  // 아래 코드는 타입 오류 발생 안함
+  let a: number = NaN;
+  let b: number = Infinity;
+  ```
 
 ### [bigInt](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/BigInt) - Number.MAX_SAFE_INTEGER(2<sup>53</sup>-1) 보다 큰 값 할당
 
@@ -297,10 +563,129 @@ let SYMBOL: unique symbol = Symbol(); // 타입 에러 발생: A variable whose 
 
 ### object
 
+- 가급적 사용하지 말도록 권장, any 타입과 유사하게 객체에 해당하는 모든 값을 유동적으로 할당할 수 있기 때문
+- 원시 타입에 속하지 않는 값은 모두 객체 타입!
+  - 예: 객체, 배열, 정규 포현식, 함수, 클래스 등
+
 ### {}
+
+- 중괄호 안에 객체의 속성 타입을 지정해 주는 식으로 사용
+- 타이핑되는 객체가 중괄호 안에서 선언된 구조와 일치해야 함을 말함
+
+  ```typescript
+  // 정상
+  const notice: { title: string; description: string } = {
+    title: "1",
+    description: "2",
+  };
+
+  // Syntax Error - startAt은 지정한 타입에 존재하지 않으므로 오류
+  const notice: { title: string; description: string } = {
+    title: "1",
+    description: "2",
+    startAt: "20250227",
+  };
+  ```
+
+- 빈 객체를 `: {}`로 타입을 지정할 순 있으나, `{}` 타입으로 지정된 객체는 어떤 값도 속성으로 할당할 수 없음
+  - 빈 객체 타입은 유틸리티 타입으로 `Record<string, never>` 처럼 사용하는게 바람직
 
 ### array
 
+- 실제 자바스크립트에서 배열은 타입 제한 없이 다양한 값을 다루지만, 이런 쓰임은 타입스크립트가 추구하는 정적 타이핑 방향과 맞지 않음
+- 타입스크립트에서는 배열을 `array`라는 별도 타입으로 다루며, 하나의 타입 값만 가질 수 있다는 점에서 조금 더 엄격
+- 하지만 원소 개수는 타입에 영향 안줌!
+- 배열 타입 선언 방식
+  - Array
+    - 예시: `Array<number>`
+  - []
+    - 예시: `cardId: number[]`
+- 튜플 타입도 대괄호로 선언
+  - 튜플: 대괄호 내부에는 선언 시점에 지정해준 타입 값만 할당할 수 있음, 원소 개수도 타입 선언 시점에 미리 정해짐
+  - 예시
+    - 정상: `const targetCodes: ["A","B"] = ["A","B"];`
+    - 잘못된 사용: `const targetCodes: ["A","B"] = ["A","B","C"];`
+
 ### type과 interface 키워드
 
+```typescript
+// 타입 선언 방식
+type Notice = { title: string; description: string };
+// 인터페이스 선언 방식
+interface INotice {
+  title: string;
+  description: string;
+}
+```
+
+#### 공통점
+
+- 객체 리터럴 방식의 중복을 줄이기 위해 사용
+- 재사용 가능한 타입 정의 가능
+
+#### type을 사용하는 경우
+
+1. 계산된 프로퍼티(Computed Value)가 필요할 때
+   ```typescript
+   type DynamicProps = {
+     [key in `setting_${string}`]: boolean;
+   };
+   ```
+2. 디버깅 편의성이 필요할 때
+
+- IDE에서 리터럴 값이 직접 노출되어 타입 확인이 용이함
+
+3. 유니온 타입, 교차 타입 등 고급 타입 기능이 필요할 때
+   ```typescript
+   type Status = "loading" | "success" | "error";
+   type Combined = TypeA & TypeB;
+   ```
+
+#### interface를 사용하는 경우
+
+1. 객체지향적 코드 작성 시 (extends, implements 활용)
+
+   ```typescript
+   interface Animal {
+     name: string;
+   }
+   interface Dog extends Animal {
+     bark(): void;
+   }
+   ```
+
+2. 선언 병합(Declaration Merging)이 필요할 때
+
+   ```typescript
+   interface User {
+     name: string;
+   }
+   interface User {
+     age: number;
+   } // 병합됨
+   ```
+
+**interface 사용 시 주의 점**
+
+- Record 타입 사용 시 interface처럼 인덱스 키가 없는 경우 오류가 발생할 수 있음
+- type은 선언 병합이 불가능하지만, interface는 동일한 이름으로 여러 번 선언하면 자동으로 병합됨
+
 ### function
+
+```typescript
+// 매개변수와 리턴 값 정의
+function add(a: number, b: number): number {
+  return a + b;
+}
+```
+
+- 타입스크립트에서는 매개변수도 별도 타입으로 지정해야함
+- 자바스크립트의 function 이라는 키워드 자체를 타입으로 사용하진 않음
+
+- 함수 자체의 타입은 `호출 시그니처`를 정의하는 방식 사용
+
+  - 타입스크립트에서는 함수의 타입을 명시할 때 화살표함수 방식으로만 호출 시그니처를 정의함
+
+    ```typescript
+    type add = (a: number, b: number) => number;
+    ```
